Changelog
=========


1.15.1 (unreleased)
-------------------

- Nothing changed yet.


1.15.0 (2018-03-14)
-------------------

- Drop support for Plone 4.2. [mbaechtold]

- Prevent exception upon HEAD requests to the download view of a file. [mbaechtold]


1.14.0 (2017-11-16)
-------------------

- A new registry record can be used to prevent redirects to the download
  view of the file. [mbaechtold]

- Rewrite download redirection tests using ftw.testbrowser, drop dependency on
  ftw.testing[splinter]. [lgraf]


1.13.0 (2017-05-15)
-------------------

- Added option to download file with inline content-disposition header. [lknoepfel]

- A new option on the file can be used to protect a file. Protected files
  cannot be deleted by anyone until the option is unchecked. [mbaechtold]


1.12.0 (2016-11-24)
-------------------

- Record ftw.activity event when file downloaded. [jone]

- Eliminate bad security declarations through interface. [jone]

- Simplify schema inheritance. [jone]

- Fix security declarations for getOriginFilename, is_image and getField. [jone]


1.11.5 (2016-07-19)
-------------------

- documentDate is now required.
  https://github.com/4teamwork/ftw.file/issues/64
  [elioschmutz]

- Set batch size to 10. 50 is imho way to mutch, event 20 makes me scrolling 3 down.
  So 10 is imho OK. No? let's fight... or someone implements a configurable number.
  [mathias.leimgruber]

- Added pagination for journal.
  [lknoepfel]

- Allow SiteAdministrator to add files.
  [tschanzt]


1.11.4 (2016-01-27)
-------------------

- The origin filename must not contain "/". Otherwise a 404 will occur
  when the user tries to download the file.
  [mbaechtold]

- Reload page if drag&drop upload has failed.
  [elioschmutz]


1.11.3 (2016-01-05)
-------------------

- Fix journal action translation for files
  [elioschmutz]

- Fix drag'n'drop for files in Firefox.
  [Kevin Bieri]

- Fix regression when trying to link files in TinyMCE.