@@ -12,7 +12,8 @@
 
     <lawgiver:map_permissions
         action_group="manage content settings"
-        permissions="ftw.file: Edit advanced fields"
+        permissions="ftw.file: Edit advanced fields,
+                     ftw.file: Edit date fields"
         />
 
     <lawgiver:ignore
