@@ -11,6 +11,11 @@
       <role name="Site Administrator" />
       <role name="Reviewer" />
     </permission>
+    <permission name="ftw.file: Edit date fields" acquire="False">
+      <role name="Manager" />
+      <role name="Site Administrator" />
+      <role name="Reviewer" />
+    </permission>
     <permission name="ftw.file: Protect file" acquire="True">
       <role name="Manager" />
       <role name="Site Administrator" />
