@@ -5,7 +5,8 @@ Changelog
 1.15.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Protect the edit form tab (schemata) for the expiration date and effective date
+  with a separate permission. [mbaechtold]
 
 
 1.15.0 (2018-03-14)
